base/02-extern/09-turn/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: turn-deploy
  namespace: turn
  labels:
    environment: extern
    app: turn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: turn
  template:
    metadata:
      labels:
        app: turn
    spec:
      containers:
        - name: turn
          image: crisu1710/turn_server
          ports:
            - containerPort: 3478
              name: main
