base/02-extern/09-turn/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: turn-service
  namespace: turn
  labels:
    environment: extern
    app: turn
spec:
  selector:
    app: turn
  type: ClusterIP
  ports:
    - targetPort: 3478
      port: 3478
      name: main
