base/02-extern/09-turn/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: turn-https
  namespace: turn
  labels:
    environment: extern
    app: turn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`turn.robins.run`)
      kind: Rule
      services:
        - name: turn-service
          port: 3478
      middlewares:
        - name: headers
          namespace: traefik
  tls:
    certResolver: default
    options:
      name: tls
      namespace: traefik
